# opensmt

./: .clang-files  .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CPPLINT.cfg  Changelog.md  KNOWN_BUGS  LICENSE  Makefile  Makefile.am  README  README.md  aclocal.m4  astyle  astyle_options  autogen.sh  configure.ac  create_tsolver.sh  gensys_icl_sk001_itptest_eufexps.smt2  gensys_icl_sk003_itptest_eufexps.smt2  gensys_icl_sk006_itptest_eufexps.smt2  gensys_icl_sk007_itptest_eufexps.smt2  gensys_icl_sk010_itptest_eufexps.smt2  gensys_icl_sk012_itptest_eufexps.smt2  get-python-wrappers.sh  lookahead.smt2  p2-zenonumeric_s6.smt2  parser.py  picky.smt2  proof.smt2  random_lookahead.smt2  reparser.sh  res.smt2  res1.smt2  revert_last.sh  run-interpolation.sh  runme.sh  temp.txt  (+9 more)
benchmark/: CMakeLists.txt
benchmark/performance/: CMakeLists.txt  perf_RationalEfficiency.cc  perf_mkTerms.cc  perf_mkTermsBigConj.cc  perf_mkTermsSmallConj.cc
examples/: CMakeLists.txt  Makefile  README.md  test-bv.cc  test-cuf.cc  test-cuf3.cc  test.cc  test.py  test1.cc  test10_BV.cc  test11_BV.cc  test13_BV.cc  test14_BV.cc  test15_ex1CADE.cc  test16_ex2CADE_BV.cc  test17_ex2CADE_CUF.cc  test18_ex2CADE_glue_BV-CUF.cc  test2.cc  test3_BV.cc  test4_BV.cc  test5_BV.cc  test7_BV.cc  test8_BV.cc  test9_BV.cc  test_arrays.cc  test_c.c  test_itp.cc  test_lia.cc  test_lra.cc  test_lra_itp.cc  test_lra_value.cc
parallel/: CMakeLists.txt  Makefile  README  sample-cluster.sh  sample.sh
parallel/clause_sharing/: CMakeLists.txt
parallel/server/: _scattering  client.py  command.py  config.py  db.sql  framework.py  net.py  prova.py  prova2.py  server.py  smt2osmt.py  sql2times.py  sserver.py  test.py
src/: CMakeLists.txt  CPPLINT.cfg  Makefile.am  opensmt2.h  remove_PTPLib_tests.sh
src/PySMT/: opensmt_python.i  setup.py
src/api/: CMakeLists.txt  Channel.h  DimacsParser.h  GlobalStop.cc  GlobalStop.h  Interpret.C  Interpret.cc  Interpret.h  IteManager.cc  IteManager.h  IteManagerMisc.cc  MainCounter.cc  MainCounter.h  MainSolver.C  MainSolver.cc  MainSolver.h  MainSplitter.cc  MainSplitter.h  MainSplitter.hpp  Makefile.am  OpenSMTConfig.cmake.in  OpenSMTContext.C  OpenSMTContext.h  OpenSMTInterpTree.C  Opensmt.C  Opensmt.cc  Opensmt.h  PartitionManager.cc  PartitionManager.h  handwritten.h  opensmtConfig.cmake.in  opensmt_c.C  opensmt_c.h  smt2tokens.cc  smt2tokens.h
src/attributes/: ANode.h
src/cmake_modules/: FindGMP.cmake
src/cnfizers/: CMakeLists.txt  CnfState.h  Cnfizer.C  Cnfizer.cc  Cnfizer.h  Makefile.am  TermMapper.C  TermMapper.cc  TermMapper.h  Tseitin.C  Tseitin.cc  Tseitin.h
src/common/: Alloc.h  ApiException.h  CMakeLists.txt  CRTP.h  FastInteger.cc  FastInteger.h  FastRational.C  FastRational.cc  FastRational.h  FastRationals.C  FastRationals.h  FlaPartitionMap.cc  FlaPartitionMap.cpp  FlaPartitionMap.h  Float.cc  Float.h  FunUtils.h  Global.cc  Global.h  IColor.h  IntTypes.h  Integer.h  InternalException.h  InternalToUserTermMap.h  LA.C  LA.h  Makefile.am  NatSet.h  NonLinException.h  Number.h  NumberUtils.h  OpensmtAssert.h  OsmtApiException.h  OsmtAssertException.h  OsmtInternalException.h  Otl.h  PartitionInfo.cc  PartitionInfo.h  Partitions.h  Printer.h  (+30 more)
src/egraph/: CgTypes.h  Egraph.h  EgraphDTC.C  EgraphDebug.C  EgraphExplain.C  EgraphSolver.C  EgraphStore.C  Enode.C  Enode.h  EnodeStore.C  EnodeStore.h  EnodeTypes.h  GCTest.C  GCTest.h  Makefile.am  SigTab.C  SigTab.h  UFInterpolator.C  UFInterpolator.h  test.C  test3.C  test4.C  test5.C
src/interpolation/: CMakeLists.txt  InterpolationUtils.h
src/itehandler/: CMakeLists.txt  IteHandler.cc  IteHandler.h  IteToSwitch.cc  IteToSwitch.h  IteToSwitchMisc.cc
src/logics/: ArithLogic.cc  ArithLogic.h  ArrayHelpers.cc  ArrayHelpers.h  ArrayTheory.cc  ArrayTheory.h  BVLogic.C  BVLogic.cc  BVLogic.h  BitBlasterRewriter.cc  BitBlasterRewriter.h  CMakeLists.txt  CUFLogic.C  CUFLogic.cc  CUFLogic.h  CUFTheory.C  CUFTheory.cc  FSBVBitBlaster.cc  FSBVBitBlaster.h  FSBVLogic.cc  FSBVLogic.h  FSBVTheory.cc  FSBVTheory.h  FunctionTools.h  IDLTheory.cc  IDLogic.h  LALogic.C  LALogic.cc  LALogic.h  LATheory.h  LIALogic.C  LIALogic.cc  LIALogic.h  LIATheory.C  LIATheory.cc  LRALogic.C  LRALogic.cc  LRALogic.h  LRATheory.C  LRATheory.cc  (+25 more)
src/minisat/: CMakeLists.txt
src/models/: CMakeLists.txt  FunctionTools.cc  FunctionTools.h  Model.cc  Model.h  ModelBuilder.cc  ModelBuilder.h
src/net/: Makefile.am  net.C  net.h  protocol.C  protocol.h
src/options/: CMakeLists.txt  Makefile.am  SMTConfig.C  SMTConfig.cc  SMTConfig.h
src/parallel/: CMakeLists.txt  LookaheadSplitter.cc  LookaheadSplitter.h  MainSplitter.cc  MainSplitter.h  PreInterpret.cc  PreInterpret.h  ScatterSplitter.cc  ScatterSplitter.h  SplitContext.h  SplitData.cc  SplitData.h  Splitter.cc  Splitter.h  SplitterInterpret.cc  SplitterInterpret.h  opensmtSplitter.cc
src/parsers/: CMakeLists.txt  Makefile.am  handwritten.cc
src/proof/: CMakeLists.txt  InterpolationContext.cc  InterpolationContext.h  Makefile.am  PG.h  PGBuild.C  PGBuild.cc  PGCheck.C  PGCheck.cc  PGHelp.C  PGHelp.cc  PGHeuristics.C  PGHeuristics.cc  PGInterAux.C  PGInterAux.cc  PGInterCheck.C  PGInterCheck.cc  PGInterpolator.C  PGInterpolator.cc  PGMain.C  PGMain.cc  PGPrint.C  PGPrint.cc  PGRules.C  PGRules.cc  PGTransformationAlgorithms.C  PGTransformationAlgorithms.cc  ProofGlobal.h  ProofGraph.h  ProofGraphBuild.C  ProofGraphCheck.C  ProofGraphHelp.C  ProofGraphHeuristics.C  ProofGraphMain.C  ProofGraphRules.C  ProofGraphTransformationAlgorithms.C  (+1 more)
test/: ._bvnor.smt2  CMakeLists.txt  Makefile.am  NEQ004_size4.smt2  Snode.h  bmwlin_20_5_1.inter.bmc_k100_2_simplified.smt2  configure.ac  dead_dnd007.smt2  edit.smt2  let-example2.smt2  parse_test.list  parsetest  parsetest.cc  pre-logic.smt2  scatter_config.smt2  scatter_la_config.smt2  simplanglexer.ll.backup  simplanglexer_orig.ll  simplangparser.cc  simplangparser.h  simple.smt2  simplified.smt2  smt2newcontext.cc  smt2newcontext.h  smt2newlexer.cc  smt2newlexer.ll  smt2newparser.cc  smt2newparser.h  smt2newparser.yy  test.cc
(+2017 files in other folders)
